--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@ body{
 }
 #main-container{
     margin: 0 auto;
-    width: 600px;
 }
 
 #main-container form input{
@@ -16,9 +15,12 @@ body{
 
 #productos-container {
   padding: 2rem;
-  min-height: 100vh;
 }
 
+h2{
+  justify-content: center;
+  display: flex
+}
 
 #todos .todo{
     width: 100%;
@@ -220,5 +222,42 @@ body{
   border: none;
   padding: 0 0.6rem;
   border-radius: 4px;
+  cursor: pointer;
+}
+
+.editar-btn{
+  background: #3b35e5;
+  color: white;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  margin-top: 1rem;
+  cursor: pointer;
+}
+
+.editar-producto {
+  max-width: 800px;
+  margin: 2rem auto;
+  padding: 2rem;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+}
+
+.editar-producto input {
+  padding: 0.6rem;
+  margin-right: 0.5rem;
+  font-size: 0.95rem;
+}
+
+.eliminar-btn {
+  background: #e53935;
+  color: white;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  margin-top: 1rem;
   cursor: pointer;
 }
